# Feather

./: .gitignore  CMakeLists.txt  LICENSE
include/feather/: stream.h
tests/: CMakeLists.txt  test_stream.cpp
